Stupid pool fixes backport (#45)
* Update bytebuffer-collections dependency to 0.3.1

* Fix race condition in StupidPool.ObjectResourceHandler.get(); Make ObjectResourceHander use relatively light-weight sun.misc.Cleaner instead of implementing finalize(); Try return the object back to the pool in Cleaner.clean()

* Add StupidPool.poolSize AtomicLong to avoid O(n) traversal in tryReturnToPool(); update StupidPoolTest

* Ensure number of objects in StupidPool cannot exceed objectsCacheMaxCount in tryReturnToPool() method

* Don't run StupidPoolTest.testResourceHandlerClearedByJVM() on Java 7