@@ -22,11 +22,12 @@ package io.druid.collections;
 import com.google.common.base.Supplier;
 import com.metamx.common.ISE;
 import com.metamx.common.logger.Logger;
+import sun.misc.Cleaner;
 
-import java.io.IOException;
 import java.util.Queue;
 import java.util.concurrent.ConcurrentLinkedQueue;
-import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
 
 /**
  */
@@ -37,6 +38,12 @@ public class StupidPool<T>
   private final Supplier<T> generator;
 
   private final Queue<T> objects = new ConcurrentLinkedQueue<>();
+  /**
+   * {@link ConcurrentLinkedQueue}'s size() is O(n) queue traversal apparently for the sake of being 100%
+   * wait-free, that is not required by {@code StupidPool}. In {@code poolSize} we account the queue size
+   * ourselves, to avoid traversal of {@link #objects} in {@link #tryReturnToPool(Object)}.
+   */
+  private final AtomicLong poolSize = new AtomicLong(0);
 
   //note that this is just the max entries in the cache, pool can still create as many buffers as needed.
   private final int objectsCacheMaxCount;
@@ -61,17 +68,44 @@ public class StupidPool<T>
   public ResourceHolder<T> take()
   {
     final T obj = objects.poll();
-    return obj == null ? new ObjectResourceHolder(generator.get()) : new ObjectResourceHolder(obj);
+    if (obj == null) {
+      return new ObjectResourceHolder(generator.get());
+    } else {
+      poolSize.decrementAndGet();
+      return new ObjectResourceHolder(obj);
+    }
+  }
+
+  /** For tests */
+  long poolSize() {
+    return poolSize.get();
+  }
+
+  private void tryReturnToPool(T object)
+  {
+    long currentPoolSize;
+    do {
+      currentPoolSize = poolSize.get();
+      if (currentPoolSize >= objectsCacheMaxCount) {
+        log.debug("cache num entries is exceeding max limit [%s]", objectsCacheMaxCount);
+        return;
+      }
+    } while (!poolSize.compareAndSet(currentPoolSize, currentPoolSize + 1));
+    if (!objects.offer(object)) {
+      poolSize.decrementAndGet();
+      log.warn(new ISE("Queue offer failed"), "Could not offer object [%s] back into the queue", object);
+    }
   }
 
   private class ObjectResourceHolder implements ResourceHolder<T>
   {
-    private AtomicBoolean closed = new AtomicBoolean(false);
-    private final T object;
+    private final AtomicReference<T> objectRef;
+    private final Cleaner cleaner;
 
-    public ObjectResourceHolder(final T object)
+    ObjectResourceHolder(final T object)
     {
-      this.object = object;
+      this.objectRef = new AtomicReference<>(object);
+      this.cleaner = Cleaner.create(ObjectResourceHolder.this, new ObjectReclaimer(objectRef));
     }
 
     // WARNING: it is entirely possible for a caller to hold onto the object and call ObjectResourceHolder.close,
@@ -79,7 +113,8 @@ public class StupidPool<T>
     @Override
     public T get()
     {
-      if (closed.get()) {
+      final T object = objectRef.get();
+      if (object == null) {
         throw new ISE("Already Closed!");
       }
 
@@ -89,29 +124,45 @@ public class StupidPool<T>
     @Override
     public void close()
     {
-      if (!closed.compareAndSet(false, true)) {
-        log.warn(new ISE("Already Closed!"), "Already closed");
-        return;
-      }
-      if (objects.size() < objectsCacheMaxCount) {
-        if (!objects.offer(object)) {
-          log.warn(new ISE("Queue offer failed"), "Could not offer object [%s] back into the queue", object);
-        }
+      final T object = objectRef.get();
+      if (object != null && objectRef.compareAndSet(object, null)) {
+        tryReturnToPool(object);
+        // Effectively does nothing, because objectRef is already set to null. The purpose of this call is to
+        // deregister the cleaner from the internal linked list of all cleaners in the JVM.
+        cleaner.clean();
       } else {
-        log.debug("cache num entries is exceeding max limit [%s]", objectsCacheMaxCount);
+        log.warn(new ISE("Already Closed!"), "Already closed");
       }
+    }
+  }
+
+  private class ObjectReclaimer implements Runnable
+  {
+    private final AtomicReference<T> objectRef;
+
+    private ObjectReclaimer(AtomicReference<T> objectRef)
+    {
+      this.objectRef = objectRef;
     }
 
     @Override
-    protected void finalize() throws Throwable
+    public void run()
     {
       try {
-        if (!closed.get()) {
+        final T object = objectRef.get();
+        if (object != null && objectRef.compareAndSet(object, null)) {
           log.warn("Not closed!  Object was[%s]. Allowing gc to prevent leak.", object);
+          tryReturnToPool(object);
         }
       }
-      finally {
-        super.finalize();
+      // Exceptions must not be thrown in Cleaner.clean(), which calls this ObjectReclaimer.run() method
+      catch (Exception e) {
+        try {
+          log.error(e, "Exception in ObjectReclaimer.run()");
+        }
+        catch (Exception ignore) {
+          // ignore
+        }
       }
     }
   }
